Fix z-index for MAPC Logo and Triangle
This commit fixes the fact that the green rectangle overlay was presenting on top of the triangle by increasing the z-index values of the specific img and triangle components.

--- a/app/assets/stylesheets/refinery/home.scss
+++ b/app/assets/stylesheets/refinery/home.scss
@@ -16,6 +16,7 @@
       img {
         width: $image_size;
         margin-bottom: 12px;
+        z-index: 1;
       }
 
       &:after {
@@ -23,6 +24,7 @@
         @include triangle($triangle_size, 'down', $v3-color_green-light);
 
         margin-left: ($image_size - $triangle_size) / 4;
+        z-index: 1;
       }
     }
 
